# cmd/server-public-api/validate/validate.go
@@ -78,3 +78,33 @@ func RegistrationValidate(req *requests.Registration) *responses.ResponseForm {
 	}
 	return resp
 }
+
+func UpdateValidate(req *requests.UserUpdate) *responses.ResponseForm {
+	resp := new(responses.ResponseForm)
+	resp.ValidateSuccess = true
+	if len(req.Username) == 0 {
+		resp.ValidateSuccess = false
+		resp.UsernameValidate = &responses.Validate{
+			Success: false,
+			Error:   responses.NewError("Empty username"),
+		}
+	}
+	if len(req.Email) == 0 {
+		resp.ValidateSuccess = false
+		resp.EmailValidate = &responses.Validate{
+			Success: false,
+			Error:   responses.NewError("Empty email"),
+		}
+	}
+	if ok := rxEmail.MatchString(req.Email); !ok {
+		resp.ValidateSuccess = false
+		resp.PasswordValidate = &responses.Validate{
+			Success: false,
+			Error:   responses.NewError("Incorrect email"),
+		}
+	}
+	if !resp.ValidateSuccess {
+		resp.Error = responses.NewError("Validate error")
+	}
+	return resp
+}
